Use lowercase and hyphens for id:s and classes

--- a/index.htm
+++ b/index.htm
@@ -15,7 +15,7 @@
             display: none;
         }
 
-        #contactDetails {
+        #contact-details {
           margin: 20px;
           padding: 10px;
           border: 1px solid hotpink;
@@ -43,10 +43,10 @@
 
 <body>
     <div id="rubrik"><b>Contacts</b></div>
-    <div id="contactSearch"><input type="text" id="search" /><button id="search-button">Sök</button></div>
-    <div><a href="#" id="contactFilter">Filtrera favoriter</a></div>
+    <div id="contact-search"><input type="text" id="search" /><button id="search-button">Sök</button></div>
+    <div><a href="#" id="contact-filter">Filtrera favoriter</a></div>
     <div id="contact-list"></div>
-    <div id="contactDetails" class="hidden"></div>
+    <div id="contact-details" class="hidden"></div>
 </body>
 
 </html>
