--- a/index.htm
+++ b/index.htm
@@ -38,7 +38,7 @@
         }
 
     </style>
-    <script src="script.js" type="text/javascript"></script>
+    <script src="script.js" type="module"></script>
 </head>
 
 <body>
