Clean up details render

--- a/index.htm
+++ b/index.htm
@@ -46,7 +46,7 @@
     <div id="contact-search"><input type="text" id="search" /><button id="search-button">Sök</button></div>
     <div><a href="#" id="contact-filter">Filtrera favoriter</a></div>
     <div id="contact-list"></div>
-    <div id="contact-details" class="hidden"></div>
+    <div id="contact-details"></div>
 </body>
 
 </html>
