--- a/index.htm
+++ b/index.htm
@@ -33,27 +33,6 @@
         border: 1px solid hotpink;
       }
 
-      .contact-item {
-        margin: .125rem 0 0;
-        padding: .5rem;
-        font-weight: bold;
-        background: #5d6961;
-      }
-
-      .contact-item:first-child {
-        margin: 0;
-        border-radius: .25rem .25rem 0 0;
-      }
-
-      .contact-item:last-child {
-        border-radius: 0 0 .25rem .25rem;
-      }
-
-      #contact-list ul {
-        margin: 0;
-        padding: 0;
-      }
-
       #close-details {
         display: block;
         float: right;
@@ -89,7 +68,9 @@
       <input type="text" id="search" /><button id="search-button">Sök</button>
     </div>
     <div class="contact-list__actions"><a href="#" id="contact-filter" class="contact-list__action">Filtrera favoriter</a></div>
-    <div id="contact-list"></div>
+    
+    <contact-list></contact-list>
+
     <div id="contact-details"></div>
   </div>
 </body>
