Use LitElement for details

--- a/index.htm
+++ b/index.htm
@@ -19,28 +19,8 @@
         margin-top: 0;
       }
 
-      .favourite {
-        background-color: gold;
-      }
-
       .hidden {
         display: none;
-      }
-
-      #contact-details {
-        margin: 20px;
-        padding: 10px;
-        border: 1px solid hotpink;
-      }
-
-      #close-details {
-        display: block;
-        float: right;
-      }
-
-      #favourite {
-        display: block;
-        float: right;
       }
 
       .wrapper {
@@ -71,7 +51,7 @@
     
     <contact-list></contact-list>
 
-    <div id="contact-details"></div>
+    <contact-details></contact-details>
   </div>
 </body>
 
