Use LitElement for search

--- a/index.htm
+++ b/index.htm
@@ -44,9 +44,9 @@
 <body>
   <div class="wrapper">
     <h1 id="title">Contacts</h1>
-    <div class="contact-search">
-      <input type="text" id="search" /><button id="search-button">Sök</button>
-    </div>
+
+    <contact-search></contact-search>
+
     <div class="contact-list__actions"><a href="#" id="contact-filter" class="contact-list__action">Filtrera favoriter</a></div>
     
     <contact-list></contact-list>
