--- a/index.htm
+++ b/index.htm
@@ -19,12 +19,9 @@
         margin-top: 0;
       }
 
-      .hidden {
-        display: none;
-      }
-
       .wrapper {
         max-width: 40rem;
+        margin: 0 auto;
         padding: .5rem;
       }
 
