--- a/index.htm
+++ b/index.htm
@@ -19,6 +19,10 @@
         margin-top: 0;
       }
 
+      #title {
+        margin: 0 1rem;
+      }
+
       .wrapper {
         max-width: 40rem;
         margin: 0 auto;
