--- a/index.htm
+++ b/index.htm
@@ -1,31 +1,24 @@
 <html>
-
 <head>
-    <meta charset="UTF-8">
-    <style type="text/css">
-      body {
-        margin: 0;
-        color: #fff;
-        font-family: Arial, Helvetica, sans-serif;
-        background-image: linear-gradient(to bottom, #333, #777);
-      }
+  <title>Contacts App</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-      h1 {
-        margin: 1rem 0;
-        font-weight: bold;
-      }
+  <style src type="text/css">
+    body {
+      margin: 0;
+      color: #fff;
+      font-family: Arial, Helvetica, sans-serif;
+      background-image: linear-gradient(to bottom, #333, #777);
+		}
 
-      h1:first-child {
-        margin-top: 0;
-      }
-
-      .wrapper {
-        max-width: 40rem;
-        margin: 0 auto;
-        padding: .5rem;
-      }
-    </style>
-    <script src="script.js" type="module"></script>
+    .wrapper {
+      max-width: 40rem;
+      margin: 0 auto;
+      padding: .5rem;
+    }
+  </style>
+  <script src="/contacts-app.js" type="module"></script>
 </head>
 
 <body>
