--- a/index.htm
+++ b/index.htm
@@ -1,29 +1,29 @@
 <html>
 <head>
-  <title>Contacts App</title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Contacts App</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <style src type="text/css">
-    body {
-      margin: 0;
-      color: #fff;
-      font-family: Arial, Helvetica, sans-serif;
-      background-image: linear-gradient(to bottom, #333, #777);
+	<style src type="text/css">
+		body {
+			margin: 0;
+			color: #fff;
+			font-family: Arial, Helvetica, sans-serif;
+			background-image: linear-gradient(to bottom, #2f3142 20rem, #67687d 100%);
 		}
 
-    .wrapper {
-      max-width: 40rem;
-      margin: 0 auto;
-      padding: .5rem;
-    }
-  </style>
-  <script src="/contacts-app.js" type="module"></script>
+		.wrapper {
+			max-width: 40rem;
+			margin: 0 auto;
+			padding: .5rem;
+		}
+	</style>
+	<script src="/contacts-app.js" type="module"></script>
 </head>
 
 <body>
-  <div class="wrapper">
-    <contacts-app></contacts-app>
-  </div>
+	<div class="wrapper">
+		<contacts-app></contacts-app>
+	</div>
 </body>
 </html>
